FIX: moved z-index of <nav/> to 100 to stay on top

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -37,6 +37,8 @@
     background-color: var(--bg-primary);
     transition: width 1000ms ease;
     overflow: scroll;
+    z-index: 100;
+
   }
   
   .navbar-nav {
